--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-  </head>
-  <body>
-    <div id="app"><!--index.jsx injects App.jsx here--></div>
-    <script type="module" src="/index.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+    </head>
+    <body>
+        <!-- <script type="module">
+            import RefreshRuntime from "/@react-refresh"
+            RefreshRuntime.injectIntoGlobalHook(window)
+            window.$RefreshReg$ = () => {}
+            window.$RefreshSig$ = () => (type) => type
+            window.__vite_plugin_react_preamble_installed__ = true
+        </script> -->
+        <div id="app"><!--index.jsx injects App.jsx here--></div>
+        <script type="module" src="/index.jsx"></script>
+    </body>
 </html>
